# net

./: .gitignore  CONTRIBUTING.md  CUserschief.claudeprojectsC--Users-chief-Desktop-github-cyberdeck5eb09e91-049c-4b3f-8d96-949de9fbc6a1tool-resultsdisk_full_diff.txt  LICENSE-APACHE  README.md  codecov.yml
net/crates/net/: BENCHMARKS.md  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
net/crates/net/.cargo/: config.toml
net/crates/net/.config/: nextest.toml
net/crates/net/adapters/mcp/: Cargo.toml
net/crates/net/aggregator-daemon/: Cargo.toml
net/crates/net/aggregator-daemon/src/: lib.rs  main.rs
net/crates/net/aggregator-daemon/tests/: boot_and_query.rs  print_bootstrap.rs
net/crates/net/benches/: auth_guard.rs  capability_burst.rs  capability_propagation.rs  capability_scheduler_reaction.rs  cortex.rs  ingestion.rs  island_claim_boundaries.rs  island_claim_divergence.rs  island_claim_fallback.rs  island_claim_harness.rs  island_claim_match.rs  island_claim_recovery.rs  island_claim_sensed.rs  mesh.rs  net.rs  org_signature.rs  origin_cache_bench.rs  placement.rs  redex.rs  reliability.rs  sensing_signature.rs
net/crates/net/benches/bench_island_claim/: mod.rs
net/crates/net/benches/bench_mesh_pair/: mod.rs
net/crates/net/benchmarks/: BENCHMARK_RESULTS_14900K.md  BENCHMARK_RESULTS_14900K_2.md  BENCHMARK_RESULTS_M1_MAX.md  BENCHMARK_RESULTS_M1_MAX_2.md
net/crates/net/bindings/node/: Cargo.toml  README.md  aggregator.ts  errors.d.ts  errors.js  errors.ts  index.d.ts  index.js  mesh_rpc.d.ts  mesh_rpc.js  mesh_rpc.ts  meshdb.ts  org.ts  package.json  tool.ts  tsconfig.build.json  tsconfig.json
net/crates/net/bindings/python/: Cargo.toml  README.md  pyproject.toml
net/crates/net/cli/: Cargo.toml  README.md
net/crates/net/cli/npm/: LICENSE  README.md  package.json
net/crates/net/cli/python/: LICENSE-MIT  README.md  pyproject.toml
net/crates/net/cli/src/: config.rs  context.rs  error.rs  main.rs  output.rs  parsers.rs  prelude.rs  secret.rs
net/crates/net/cli/tests/: aggregator_remote.rs  cap_announce.rs  dry_run.rs  exit_codes.rs  help.rs  mcp_pin.rs  org_adopt.rs  org_grant.rs  seed_publish_guard.rs  transfer_cli_admin.rs  transfer_cli_blob.rs  transfer_cli_dir.rs  transfer_cli_visibility.rs  typegen_cli_diff.rs  typegen_cli_python.rs  typegen_cli_ts.rs  typegen_downstream_python.rs  typegen_downstream_ts.rs
net/crates/net/deck/: Cargo.toml  LICENSE-MIT  PLAN.md  README.md  build.rs
net/crates/net/deck/npm/: LICENSE  README.md  package.json
net/crates/net/deck/python/: README.md  pyproject.toml
net/crates/net/deck/src/: app.rs  bookmarks.rs  demo.rs  lineage.rs  main.rs  nodes.rs  runtime.rs  streams.rs  theme.rs
net/crates/net/docs/: AGENT_TOOLS.md  BEHAVIOR.md  CAPABILITIES_SCHEMA.md  CAPABILITY_ENHANCEMENTS_USAGE.md  CAPABILITY_SYSTEM_MIGRATION.md  CAPABILITY_SYSTEM_PLAN.md  COMPUTE.md  CONFIG_REPLICATION.md  IDENTITY.md  RELEASE_ROADMAP.md  RELEASE_STEPS  RELEASE_v0.11_KILLING_MOON_PHASE_IV.md  SENSING.md  STORAGE_AND_CORTEX.md  SUBPROTOCOLS.md  TRANSPORT.md
net/crates/net/docs/cli/: TRANSFER.md  TYPEGEN.md
net/crates/net/docs/misc/: BUG_AUDIT_2026_04_30_CORE.md  BUG_AUDIT_2026_05_03.md  BUG_AUDIT_2026_05_03_MESH.md  BUG_AUDIT_2026_05_03_REMAINING_PLAN.md  BUG_AUDIT_2026_05_17_NET_CLI.md  BUG_AUDIT_2026_05_18_CARRIED_FORWARD.md  BUG_AUDIT_2026_05_18_NET_CRATE_PLAN.md  BUG_AUDIT_2026_06_18_BINDINGS.md  CODE_REVIEW_2026_05_05_NRPC.md  CODE_REVIEW_2026_05_10_CAPABILITY_SYSTEM_2.md  CODE_REVIEW_2026_05_10_CAPABILITY_SYSTEM_2_PASS_2.md  CODE_REVIEW_2026_05_11_DATAFORTS.md  CODE_REVIEW_2026_05_11_REDEX_DISTRIBUTED.md  CODE_REVIEW_2026_05_12_DATAFORTS_BLOB.md  CODE_REVIEW_2026_05_13_MESHDB.md  CODE_REVIEW_2026_05_13_MESHDB_PASS_2.md  CODE_REVIEW_2026_05_13_MESHOS.md  CODE_REVIEW_2026_05_14_DECK_SDK.md  CODE_REVIEW_2026_05_14_MESHOS.md  CODE_REVIEW_2026_05_16_DECK_TUI.md  CODE_REVIEW_2026_05_16_DECK_TUI_SECOND_PASS.md  CODE_REVIEW_2026_05_16_DECK_TUI_THIRD_PASS.md  CODE_REVIEW_2026_05_17_MESHOS_SDKS.md  CODE_REVIEW_2026_05_17_MESHOS_SDKS_SECOND_PASS.md  CODE_REVIEW_2026_05_17_NET_CLI_PHASE1.md  CODE_REVIEW_2026_05_18_BUGFIXES_15.md  CODE_REVIEW_2026_05_19_CAPABILITY_AUTH.md  CODE_REVIEW_2026_05_19_DATAFORTS_BLOB_V2.md  CODE_REVIEW_2026_05_19_NRPC_STREAMING.md  CODE_REVIEW_2026_05_22_MULTIFOLD.md  (+52 more)
net/crates/net/examples/: capability.c  capability_aggregation.c  deck.c  interop_smoke.rs  meshdb.c  meshos.c  natsim_node.rs  scheduler.c  transport.c
net/crates/net/fuzz/: Cargo.toml
net/crates/net/include/: README.md  net.go.h  net.h  net_cortex.h  net_deck.h  net_mcp.h  net_meshdb.h  net_meshos.h  net_org.h  net_rpc.h  net_transport.h
net/crates/net/payments/: Cargo.toml
net/crates/net/sdk/: Cargo.toml  README.md
net/crates/net/sdk-macros/: Cargo.toml  README.md
net/crates/net/sdk-py/: README.md  pyproject.toml
net/crates/net/sdk-ts/: README.md  package.json  tsconfig.json
net/crates/net/src/: bus.rs  config.rs  error.rs  event.rs  timestamp.rs
net/crates/net/tests/: aggregator_fold_query.rs  aggregator_registry_rpc.rs  batched_ingress_integrity.rs  blob_transfer.rs  bus_shutdown_drain.rs  bus_stranded_flush.rs  capability_aggregation_e2e.rs  capability_auth_call_path.rs  capability_auth_conformance.rs  capability_broadcast.rs  capability_exposure_revocation.rs  capability_multihop.rs  capability_schema_doc_guard.rs  capability_scope.rs  chain_discovery.rs  channel_auth.rs  channel_auth_hardening.rs  connect_direct.rs  coordinator_selection.rs  cortex_ryw_global_cap.rs  cross_lang_capability_fixtures.rs  cross_peer_blob.rs  dataforts_blob_e2e.rs  dataforts_blob_v3_cdc_conformance.rs  dataforts_blob_v3_composed_conformance.rs  dataforts_blob_v3_rs_conformance.rs  dataforts_blob_v3_tree_conformance.rs  dataforts_gravity_e2e.rs  dataforts_greedy_e2e.rs  deck_pipeline.rs  dir_transfer.rs  direct_upgrade.rs  error_kind_mirror.rs  event_pingwave.rs  failure_detector_matrix.rs  ffi_poll_buffer.rs  ffi_shutdown_race.rs  gang_claim_node.rs  integration_cortex_adapter.rs  integration_cortex_memories.rs  (+80 more)
(+1496 files in other folders)
