[workspace]
members = [
    ".",
    "sdk",
    "deck",
    "cli",
    "bindings/node",
    "bindings/python",
    "bindings/go/compute-ffi",
    "bindings/go/rpc-ffi",
    "bindings/go/meshdb-ffi",
    "bindings/go/meshos-ffi",
    "bindings/go/deck-ffi",
]

[package]
name = "ai2070-net"
version = "0.18.0"
edition = "2021"
description = "High-performance, schema-agnostic, backend-agnostic event bus"
license = "Apache-2.0"
repository = "https://github.com/ai-2070/net"
keywords = ["event-bus", "high-performance", "streaming"]
categories = ["asynchronous", "concurrency", "data-structures"]

[lints.rust]
# `loom` is a custom cfg activated via RUSTFLAGS="--cfg loom"
# for `tests/loom_models.rs` (FAILURE_PATH_HARDENING_PLAN
# Stage 2). Declaring it here suppresses the stable-compiler
# `unexpected_cfgs` warning without affecting default builds.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[lib]
# Keep the crate name as `net` so internal `use net::...` paths and
# every dependent that aliases via `net = { package = "ai2070-net", ... }`
# resolve without code changes. The published artifact is
# `ai2070-net` on crates.io.
name = "net"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
# Out-of-the-box `cargo add ai2070-net` ships the same stack the
# Python wheel and Node npm package ship by default — mesh transport
# + NAT traversal + CortEX (folded state) + NetDb + RedEX disk +
# MeshDB query layer + MeshOS daemon-authoring + Dataforts blob
# storage. `redis`, `jetstream`, `port-mapping`, `cli` stay opt-in:
# external service deps / niche audiences / +1.4 MB router-poking
# crate / binary-only surface. `compute` and `groups` aren't
# core-crate features — they live in `net-sdk` and only the bindings
# expose them.
default = [
    "net",
    "nat-traversal",
    "cortex",
    "meshdb",
    "meshos",
    "dataforts",
]
redis = ["dep:redis"]
jetstream = ["dep:async-nats"]
net = [
    "dep:chacha20poly1305",
    "dep:snow",
    "dep:getrandom",
    "dep:dashmap",
    "dep:crossbeam-queue",
    "dep:socket2",
    "dep:hex",
    "dep:libc",
    "dep:blake2",
    "dep:ed25519-dalek",
    "dep:x25519-dalek",
]
regex = ["dep:regex"]
ffi = []
redex = ["net", "dep:tokio-stream", "dep:postcard"]
redex-disk = ["redex"]
cortex = ["redex"]
netdb = ["cortex"]
# MeshDB (Atomic Playboys) — federated query layer above the
# capability-query primitives + CortEX folds. AST + planner
# + executor for time-travel / lineage / cross-chain joins /
# streaming aggregates across many nodes and chains.
# Disabled by default; activation requires a concrete consumer
# workload (telemetry + Deck metrics are the named
# candidates). See `docs/plans/MESHDB_PLAN.md`.
meshdb = ["cortex"]
# MeshOS (Atomic Playboys, follows MeshDB) — cluster-behavior
# engine. One canonical event loop per node that reconciles
# desired vs actual state, supervises daemons, enforces replica
# placement, applies admin intent (drain / cordon /
# maintenance), and folds the result into a behavior snapshot
# for Deck. Phase A ships the skeleton (event mux + pure-sync
# reconcile no-op + action executor); later phases fill in
# supervision (B), replica enforcement (C), locality + admin
# events (D), maintenance state machine (E), behavior snapshot
# fold (F), and backpressure (G). See `docs/plans/MESHOS_PLAN.md`.
meshos = ["cortex", "dep:blake3"]
# Dataforts (Rebel Yell) — compile the dataforts module surface,
# which covers every phase the plan calls runtime-toggleable:
# greedy-LRU caching (Phase 1), data-gravity heat counters
# (Phase 4), and the surfaces that compose against them. Each
# phase exposes its own `enable_*` / `disable_*` operator
# methods on `Redex`; toggling at runtime is the cluster-policy
# control surface, not a Cargo-feature decision. See
# `docs/misc/DATAFORTS_PLAN.md` for the per-phase wiring + the
# rationale for the single compile-time gate.
dataforts = ["redex", "redex-disk", "dep:blake3", "dep:fastcdc"]
# NAT traversal — reflex probe + classification + rendezvous punch.
# Stages 1–3 of `docs/NAT_TRAVERSAL_PLAN.md`. No new deps; rides
# the existing mesh + subprotocol surface. Sits on top of `net`.
nat-traversal = ["net"]
# Opportunistic port mapping via UPnP-IGD / NAT-PMP / PCP.
# Stage 4 of the plan. Adds two external deps; off by default
# because port mapping modifies state on the user's router and
# some environments forbid it.
port-mapping = ["nat-traversal", "dep:igd-next"]
# NB: NAT-PMP wire format is inlined in
# `adapter/net/traversal/portmap/natpmp.rs` per plan decision 10
# — no `rust-natpmp` dep. UPnP-IGD SOAP / SSDP is complex
# enough to justify pulling in `igd-next` (stage 4b-3).
# Operator CLI surface (`net-blob` bin). Pulls in `clap` for
# subcommand + arg parsing. Composes against `dataforts` +
# `redex-disk` so the bin can open a persistent Redex handle
# and drive the MeshBlobAdapter directly — no daemon / IPC
# dependency. Gated behind its own feature so library consumers
# don't pay the clap build cost.
cli = ["dataforts", "redex-disk", "dep:clap"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net"] }

# JSON handling (schema-agnostic)
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }

# High-performance primitives
crossbeam-utils = "0.8"
parking_lot = "0.12"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Zero-copy bytes
bytes = "1"

# Timestamp generation
quanta = "0.12"

# Base64 encoding for cursors
base64 = "0.22"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
arc-swap = "1.7.1"

# Net adapter (optional)
chacha20poly1305 = { version = "0.10", optional = true }
snow = { version = "0.10.0", optional = true }
getrandom = { version = "0.4.2", optional = true }
dashmap = { version = "6", optional = true }
crossbeam-queue = { version = "0.3", optional = true }
socket2 = { version = "0.6", features = ["all"], optional = true }
hex = { version = "0.4", optional = true }
libc = { version = "0.2", optional = true }
blake2 = { version = "0.10", optional = true }
# BLAKE3 — content-addressed hash for the Dataforts blob surface
# (Phase 3). Locked by `DATAFORTS_PLAN.md` as the only blob hash
# algorithm; a 1-byte version field reserved in the encoded form
# lets future migrations land without breaking BlobRef wire compat.
blake3 = { version = "1", optional = true }
# FastCDC content-defined chunker for the Dataforts blob v0.3 Phase B
# CDC path. Pinned to v4.x (FastCDC-2020 / normalized-chunking
# variant) — boundaries are content-defined, so the same input
# always lands on the same chunk boundaries, enabling dedup-after-
# edit. The v2020 module exposes `FastCDC::new(buf, min, avg, max)`
# returning a chunk iterator; we drive it incrementally over an
# accumulated buffer in [`super::dataforts::blob::cdc::CdcStreamChunker`].
fastcdc = { version = "4", optional = true, default-features = false }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"], optional = true }
# X25519 DH for the `IdentityEnvelope` sealed-box construction used
# by daemon migration. We derive an ephemeral pubkey, DH against the
# target's static X25519 pubkey, and key an XChaCha20-Poly1305 AEAD
# to seal the 32-byte ed25519 seed under the target's key — the
# construction mirrors libsodium's `crypto_box_seal` but uses the
# XChaCha AEAD already in-tree rather than pulling in XSalsa20.
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"], optional = true }
regex = { version = "1", optional = true }

# UPnP-IGD client (optional). Behind `port-mapping` — used by
# `adapter/net/traversal/portmap/upnp.rs`. NAT-PMP's wire format
# is inlined directly (see `portmap/natpmp.rs`); UPnP involves
# SSDP discovery + SOAP XML + URL dispatch, which is
# considerably more ceremony than is worth re-implementing.
igd-next = { version = "0.17", default-features = false, features = ["aio_tokio"], optional = true }

# Redis adapter (optional)
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"], optional = true }

# JetStream adapter (optional)
async-nats = { version = "0.48", optional = true }

# RedEX adapter (optional)
tokio-stream = { version = "0.1", optional = true, features = ["sync"] }
postcard = { version = "1", features = ["alloc"], optional = true, default-features = false }

# Operator CLI dep (`net-blob` bin). Optional + gated behind the
# `cli` feature so library consumers don't pay the clap build
# cost. v4 derive macros give us the typed Subcommand surface
# the bin uses for routing.
clap = { version = "4", features = ["derive", "env"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.8", features = ["async_tokio"] }
rand = "0.10"
# Loom only enters the dep graph when tests are built with
# `RUSTFLAGS="--cfg loom"`. Gating via cfg so the default
# `cargo test` / `cargo build` paths don't pay its build cost.
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[[bin]]
name = "net-blob"
path = "src/bin/net-blob.rs"
required-features = ["cli"]

[[bench]]
name = "ingestion"
harness = false

[[bench]]
name = "parallel"
harness = false

[[bench]]
name = "net"
harness = false
required-features = ["net"]

[[bench]]
name = "mesh"
harness = false
required-features = ["net"]

[[bench]]
name = "cortex"
harness = false
required-features = ["cortex", "netdb"]

[[bench]]
name = "redex"
harness = false
required-features = ["redex"]

[[bench]]
name = "auth_guard"
harness = false
required-features = ["net"]

[[bench]]
name = "placement"
harness = false
required-features = ["net"]

[[test]]
name = "integration_redis"
path = "tests/integration_redis.rs"
required-features = ["redis"]

[[test]]
name = "integration_jetstream"
path = "tests/integration_jetstream.rs"
required-features = ["jetstream"]

[[test]]
name = "integration_net"
path = "tests/integration_net.rs"
required-features = ["net"]

[[test]]
name = "integration_redex"
path = "tests/integration_redex.rs"
required-features = ["redex"]

[[test]]
name = "integration_cortex_adapter"
path = "tests/integration_cortex_adapter.rs"
required-features = ["cortex"]

[[test]]
name = "integration_cortex_tasks"
path = "tests/integration_cortex_tasks.rs"
required-features = ["cortex"]

[[test]]
name = "integration_cortex_memories"
path = "tests/integration_cortex_memories.rs"
required-features = ["cortex"]

[[test]]
name = "integration_netdb"
path = "tests/integration_netdb.rs"
required-features = ["netdb"]

[[test]]
# Cross-binding nRPC wire-format compatibility — Phase B7.
# Loads the shared `tests/cross_lang_nrpc/golden_vectors.json` fixture
# and asserts the canonical `cross_lang_echo_sum` service round-trips
# correctly through the Rust runtime. The same fixture drives the
# binding-side compat tests in `bindings/{node,python}`.
name = "integration_nrpc_cross_lang"
path = "tests/integration_nrpc_cross_lang.rs"
required-features = ["cortex"]

[[test]]
# End-to-end: predicate → `net-where:` request header
# (Phase 9b) → server-side `predicate_from_rpc_headers` decode +
# stateless evaluator (Phase 9c) over a real two-node mesh.
# Composes the two SDK surfaces that ship the predicate envelope
# and the predicate evaluator; per-piece unit tests cover them in
# isolation but the full nRPC round-trip lives here.
name = "integration_nrpc_predicate_header"
path = "tests/integration_nrpc_predicate_header.rs"
required-features = ["cortex"]

[[test]]
# End-to-end: register a custom `PlacementFilter` via the
# process-global registry, score across a populated
# `CapabilityIndex` with `StandardPlacement::with_custom_filter_id`,
# verify the filter's verdict reaches the composed score and that
# unregister-mid-flight collapses to a hard veto.
name = "integration_placement_filter_callback"
path = "tests/integration_placement_filter_callback.rs"
required-features = ["net"]

[[test]]
# `net-blob` CLI integration test. Spawns the bin against a
# temp persistent dir, exercises put / get / stat / exists /
# ls / pin / gc / metrics subcommands, and asserts on the
# observable shape (exit codes, stdout JSON, file bytes).
# Gated on the same `cli` feature as the bin itself.
name = "net_blob_cli"
path = "tests/net_blob_cli.rs"
required-features = ["cli"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1

# Fast compile times for development
[profile.dev]
opt-level = 0
debug = true

# Release with debug symbols for profiling
[profile.release-with-debug]
inherits = "release"
debug = true

# Maximum performance for local benchmarks
# Use: RUSTFLAGS="-C target-cpu=native" cargo build --profile native
[profile.native]
inherits = "release"
lto = "thin"  # Faster link times than full LTO
